# Coursework3

./:  .env.example  README.md  pyproject.toml
src/: api.py  dbmanager.py  employers.json  main.py  vacancies.json  vacancies.py
