[project]
name = "coursework3"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitriy",email = "dm.tsiganov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.2"
isort = "^6.0.1"
black = "^25.1.0"
mypy = "^1.15.0"

